--- a/pom.xml
+++ b/pom.xml
@@ -78,19 +78,20 @@
       <artifactId>allure-testng</artifactId>
       <version>${allure.testng}</version>
     </dependency>
+
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
       <version>4.4.3</version>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.14.3</version>
       <scope>compile</scope>
     </dependency>
-
 
   </dependencies>
 
@@ -107,6 +108,16 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
+
+        <plugin>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-maven</artifactId>
+          <version>2.9</version>
+          <configuration>
+            <reportVersion>2.6.0</reportVersion>
+          </configuration>
+        </plugin>
+
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
