--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,17 @@
   <name>skoryk_autotests</name>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <encoding>UTF-8</encoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <selenium.version>3.141.59</selenium.version>
     <webdriver.manager>4.4.3</webdriver.manager>
+    <aspectj.version>1.8.10</aspectj.version>
     <testng>6.14.3</testng>
+    <maven.surefire.plugin>2.19.1</maven.surefire.plugin>
     <allure.testng.version>2.13.8</allure.testng.version>
     <allure.plugin.version>2.10.0</allure.plugin.version>
-    <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
-    <allure.testng>2.6.0</allure.testng>
-    <aspectj.version>1.8.10</aspectj.version>
+    <allure.testng>2.12.1</allure.testng>
     <lombok.version>1.18.20</lombok.version>
   </properties>
 
@@ -79,7 +79,7 @@
     <dependency>
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-testng</artifactId>
-      <version>${allure.testng.version}</version>
+      <version>${allure.testng}</version>
     </dependency>
 
     <dependency>
@@ -89,11 +89,23 @@
       <scope>compile</scope>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
   <build>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -109,36 +121,12 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven.compiler.version}</version>
           <configuration>
-            <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
-            <systemProperties>
-              <property>
-                <name>allure.results.directory</name>
-                <value>${project.build.directory}/allure-results</value>
-              </property>
-            </systemProperties>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.aspectj</groupId>
-              <artifactId>aspectjweaver</artifactId>
-              <version>${aspectj.version}</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-
-        <plugin>
-          <groupId>io.qameta.allure</groupId>
-          <artifactId>allure-maven</artifactId>
-          <version>${allure.plugin.version}</version>
-          <configuration>
-            <reportVersion>${allure.testng.version}</reportVersion>
-            <resultsDirectory>${project.basedir}/target/allure-results</resultsDirectory>
-            <allureDownloadUrl>
-              https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${allure.testng.version}/allure-commandline-${allure.testng.version}.zip
-            </allureDownloadUrl>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+            <encoding>${encoding}</encoding>
           </configuration>
         </plugin>
 
@@ -165,6 +153,29 @@
             </dependency>
           </dependencies>
         </plugin>
+        <plugin>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-maven</artifactId>
+          <version>${allure.plugin.version}</version>
+          <configuration>
+            <reportVersion>${allure.testng.version}</reportVersion>
+            <resultsDirectory>${project.basedir}/target/allure-results</resultsDirectory>
+            <allureDownloadUrl>
+              https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${allure.testng.version}/allure-commandline-${allure.testng.version}.zip
+            </allureDownloadUrl>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-maven</artifactId>
+          <version>2.9</version>
+          <configuration>
+            <reportVersion>2.6.0</reportVersion>
+          </configuration>
+        </plugin>
+
+
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
