--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <selenium.version>3.141.59</selenium.version>
     <webdriver.manager>4.4.3</webdriver.manager>
-    <aspectj.version>1.8.10</aspectj.version>
+    <aspectj.version>1.9.6</aspectj.version>
     <testng>6.14.3</testng>
+    <log4j-version>2.14.1</log4j-version>
     <maven.surefire.plugin>2.19.1</maven.surefire.plugin>
-    <allure.testng.version>2.13.8</allure.testng.version>
+    <allure.testng.version>2.14.0</allure.testng.version>
     <allure.plugin.version>2.10.0</allure.plugin.version>
     <allure.testng>2.12.1</allure.testng>
     <lombok.version>1.18.20</lombok.version>
@@ -31,6 +32,19 @@
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
       <version>${selenium.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.14.1</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -56,17 +70,11 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-nop</artifactId>
-      <version>1.7.13</version>
+      <version>1.7.30</version>
     </dependency>
 
 
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>${testng}</version>
-      <scope>test</scope>
-    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
     <dependency>
@@ -133,7 +141,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surfire.version}</version>
+          <version>3.0.0-M5</version>
           <configuration>
             <suiteXmlFiles>
               <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
