--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <maven.surefire.plugin>2.19.1</maven.surefire.plugin>
     <allure.testng.version>2.14.0</allure.testng.version>
     <allure.plugin.version>2.10.0</allure.plugin.version>
-    <allure.testng>2.12.1</allure.testng>
+    <allure.testng>2.13.9</allure.testng>
     <lombok.version>1.18.20</lombok.version>
   </properties>
 
@@ -104,6 +104,12 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>${aspectj.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -127,16 +133,6 @@
           <version>3.0.2</version>
         </plugin>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven.compiler.version}</version>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-            <encoding>${encoding}</encoding>
-          </configuration>
-        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -182,8 +178,6 @@
             <reportVersion>2.6.0</reportVersion>
           </configuration>
         </plugin>
-
-
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
